toml-pretty-deser/tests/snapshots/e01__context_bug.snap
---
source: toml-pretty-deser/tests/e01.rs
expression: pretty
---
Error 1/1
  ╭─test.toml
  ┆
2 │         [[inner]]
3 │             kind = 'A'
  ┆                    ─┬─
  ┆                     │
  ┆                     ╰── Involving this enum variant.
4 │             a = 23
  ┆                   ┬
  ┆                   │
  ┆                   ╰─ Forced custom error
──╯
Hint: help here
