toml-pretty-deser/tests/snapshots/e01__custom_state_in_opt_vec_context_propagated.snap
---
source: toml-pretty-deser/tests/e01.rs
expression: pretty
---
Error 1/1
  ╭─test.toml
1 │ items = ["ok:first", "bad_value", "ok:third"]
  ┆                      ─────┬─────
  ┆                           │
  ┆                           ╰─────────────────── Value 'bad_value' must start with 'ok:'
──╯
Hint: See: https://docs.example.com/items
