toml-pretty-deser/tests/snapshots/e01__help_context_option_vec_tagged_enum_validation_failed.snap
---
source: toml-pretty-deser/tests/e01.rs
expression: pretty
---
Error 1/1
  ╭─test.toml
  ┆
2 │         [[items]]
3 │         kind = 'Item'
  ┆                ───┬──
  ┆                   │
  ┆                   ╰─── Involving this enum variant.
4 │         value = 88
  ┆                   ┬
  ┆                   │
  ┆                   ╰─ Value 88 is forbidden
──╯
Hint: Use a different number
      See: https://docs.example.com/items
