toml-pretty-deser/tests/snapshots/e01__help_context_propagates_to_nested_children.snap
---
source: toml-pretty-deser/tests/e01.rs
expression: pretty
---
Error 1/1
  ╭─test.toml
3 │         [section.subsection]
  ┆                             ┬
  ┆                             │
  ┆                             ╰─ Missing required key: 'inner_value'.
──╯
Hint: See: https://docs.example.com/subsection
      See: https://docs.example.com/section
