toml-pretty-deser/tests/snapshots/e01__help_context_propagates_to_nested_children_other_error.snap
---
source: toml-pretty-deser/tests/e01.rs
expression: pretty
---
Error 1/1
  ╭─test.toml
  ┆
3 │         [section.subsection]
4 │             inner_value = 'no'
  ┆                           ──┬─
  ┆                             │
  ┆                             ╰── Wrong type: expected u8, found string.
──╯
Hint: This value has the wrong type.
      See: https://docs.example.com/subsection
      See: https://docs.example.com/section

