toml-pretty-deser/tests/snapshots/e01__help_context_propagates_to_nested_children_other_error2.snap
---
source: toml-pretty-deser/tests/e01.rs
expression: pretty
---
Error 1/2
  ╭─test.toml
  ┆
3 │         [section.subsection]
4 │             xnner_value = 23
  ┆                             ┬
  ┆                             │
  ┆                             ╰─ Missing required key: 'inner_value'.
──╯
Hint: See: https://docs.example.com/subsection
      See: https://docs.example.com/section

Error 2/2
  ╭─test.toml
  ┆
3 │         [section.subsection]
4 │             xnner_value = 23
  ┆             ─────┬─────
  ┆                  │
  ┆                  ╰─────────── Unknown key.
──╯
Hint: Did you mean: 'inner_value'?
      See: https://docs.example.com/subsection
      See: https://docs.example.com/section

